Completed test runs, correctness OK, pending questions

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
 	<name>nethealth test</name>
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.17.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-rs-client</artifactId>
 			<version>3.6.3</version>
